# evolang

./: .gitignore  CMakeLists.txt  README.md
examples/: hello.ev
src/: main.cpp
src/ast/: ast.h
src/interpreter/: interpreter.cpp  interpreter.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: parser.cpp  parser.h
